Document `void` and `passthrough` HS types.
There are a few more types but those are not exposed to the user, `void` and `passthrough` are now exposed due to the recent changes to `script_doc`.

--- a/src/data/hsc/h1/hsc.yml
+++ b/src/data/hsc/h1/hsc.yml
@@ -104,6 +104,16 @@ ValueTypes:
       format: text
   slugKey: type
   rows:
+    - type: void
+      info:
+        en: Nothing
+        es:
+      ex: N/A
+    - type: passthrough
+      info:
+        en: Anything, used by some control flow functions.
+        es:
+      ex: N/A
     - type: boolean
       info:
         en: A value that is true or false
