Document the majority of differences between H1CE and H1A

--- a/src/content/h1/tools/h1a-ek/page.yml
+++ b/src/content/h1/tools/h1a-ek/page.yml
@@ -5,21 +5,16 @@ keywords:
   en:
     - h1a
     - hek
+    - h1aek
+    - h1a-ek
 imgCaption:
   en: >-
     [Sapien][h1a-sapien], [Guerilla][h1a-guerilla], and [Tool][h1a-tool] have returned!
 info:
-  en: >
+  en: |-
     * Release date: 2021
-
     * The tools can be [downloaded through Steam](https://store.steampowered.com/app/fake_steam_appid).
-
 related:
   - /h1/tools/hek
 stub: false
 toolName: H1A-EK
-alerts:
-  - type: info
-    md:
-      en: >-
-        After downloading the H1A-EK, please read `README_MODDING.txt`
