--- a/src/content/h1/tools/hek/blitzkrieg/page.yml
+++ b/src/content/h1/tools/hek/blitzkrieg/page.yml
@@ -1,6 +1,11 @@
 title:
   en: Blitzkrieg
-stub: true
+img: blitz.jpg
+imgCaption:
+  en: Blitzkrieg being used to export the Tutorial map.
+info:
+  en: >-
+    Released: 2003
 keywords:
   en:
     - max
