--- a/src/data/structs/h1/tags/shader_model.yml
+++ b/src/data/structs/h1/tags/shader_model.yml
@@ -28,6 +28,14 @@ type_defs:
       - name: alpha_blended_decal
       - name: true_atmospheric_fog
       - name: disable_two_sided_culling
+      - name: multipurpose_map_use_xbox_channel_order
+        meta:
+          h1a_only: true
+        comments:
+          en: >
+            If enabled, the multipurpose map will use
+            [Xbox channel order][shader_model#xbox] instead of Gearbox
+            order.
   ShaderModelMoreFlags:
     class: bitfield
     size: 2
