--- a/src/data/structs/h1/tags/weapon_collection.yml
+++ b/src/data/structs/h1/tags/weapon_collection.yml
@@ -9,8 +9,9 @@ type_defs:
       en: |-
         This tag class can still be found in leftover references in some stock
         scenario tags, but no longer exists. It was replaced by [item_collection][].
-        Scenarios which are exported to text format and re-imported using [Guerilla][]
-        may cause [Sapien] to crash due to this unrecognized tag class.
+        Scenarios which are exported to text format and re-imported using H1CE [Guerilla][]
+        may cause [Sapien][] to crash due to this unrecognized tag class. The [H1A-EK][] is
+        immune to this issue.
     fields:
       - type: pad
         size: 1
