Further document differences between H1CE and H1A. Also fix page keywords not being search indexed

--- a/src/content/h1/tools/h1a-ek/h1a-tool/page.yml
+++ b/src/content/h1/tools/h1a-ek/h1a-tool/page.yml
@@ -5,6 +5,8 @@ keywords:
     - lightmap
     - radiosity
     - cli
+    - h1atool
+    - tool
 toolName: H1A-Tool
 img: h1a-tool-structure.png
 imgCaption:
