--- a/src/data/structs/h1/tags/fog.yml
+++ b/src/data/structs/h1/tags/fog.yml
@@ -70,7 +70,7 @@ type_defs:
         comments:
           en: >
             The distance from the player where the fog reaches its _maximum
-            density_.
+            density_. This value must not be negative or zero.
       - type: pad
         size: 4
       - name: opaque_depth
@@ -80,7 +80,7 @@ type_defs:
         comments:
           en: >
             The distance from the fog plane where the fog reaches its _maximum
-            density_.
+            density_. This value must not be negative or zero.
       - type: pad
         size: 8
       - name: distance_to_water_plane
