--- a/src/data/structs/h1/tags/sky.yml
+++ b/src/data/structs/h1/tags/sky.yml
@@ -63,7 +63,9 @@ type_defs:
         meta:
           min: 0
         comments:
-          en: The irradiance power of the sky light. This value must not be negative.
+          en: >
+            The irradiance power of the sky light. This value must not be negative
+            (causes a crash in pre-H1A versions).
       - name: test_distance
         type: float
       - type: pad
@@ -102,7 +104,7 @@ type_defs:
         meta:
           min: 0
         comments:
-          en: This value must not be negative.
+          en: This value must not be negative (causes a crash in pre-H1A versions).
       - name: outdoor_ambient_radiosity_color
         type: ColorRGB
       - name: outdoor_ambient_radiosity_power
@@ -110,7 +112,7 @@ type_defs:
         meta:
           min: 0
         comments:
-          en: This value must not be negative.
+          en: This value must not be negative (causes a crash in pre-H1A versions).
       - name: outdoor_fog_color
         type: ColorRGB
       - type: pad
