H1A tool directory lookup changes; remove recover-tif for now

--- a/src/content/h1/page.yml
+++ b/src/content/h1/page.yml
@@ -1,9 +1,10 @@
 title:
-  en: "Halo: Combat Evolved"
+  en: "Halo 1"
 keywords:
   en:
     - "h1"
     - halo
+    - combat evolved
 thanks:
   gbMichelle:
     en: H1A/MCC lineage information
