Table CSS fix; standalone build usage help; more tag differences in h1a

--- a/src/data/structs/h1/tags/gbxmodel.yml
+++ b/src/data/structs/h1/tags/gbxmodel.yml
@@ -150,7 +150,8 @@ type_defs:
         meta:
           hek_max_count: 256
           hidden: true
-          max: 0
+        comments:
+          en: Generated in postprocessing from the markers in the model's permutations.
       - name: nodes
         type: Block
         type_args:
