--- a/src/data/structs/h1/tags/damage_effect.yml
+++ b/src/data/structs/h1/tags/damage_effect.yml
@@ -245,7 +245,7 @@ type_defs:
           en: >
             Controls how long camera shaking lasts. On PC, short camera shakes
             (0.05) get skipped occasionally at high FPS since this feature is
-            still [tied to frame rate][renderer#pc-regressions]. This is fixed
+            still [tied to frame rate][renderer#gearbox-regressions]. This is fixed
             and interpolated by [Chimera][].
       - name: camera_shaking_falloff_function
         type: FunctionType
