--- a/src/content/general/tools/osoyoos/page.yml
+++ b/src/content/general/tools/osoyoos/page.yml
@@ -1,10 +1,11 @@
 title:
-  en: Osoyoos Launcher
+  en: Osoyoos launcher
 img: Osoyoos.png
-imgCaption: Osoyoos with H1A-EK binaries and HEK tags
+imgCaption:
+  en: Osoyoos with H1A-EK binaries and HEK tags
 info:
   en: >
     * [Source code and
     download](https://github.com/num0005/Osoyoos-Launcher)
 stub: true
-toolName: Osoyoos Launcher
+toolName: Osoyoos launcher
