--- a/src/content/h1/tags/shader/shader_transparent_glass/page.yml
+++ b/src/content/h1/tags/shader/shader_transparent_glass/page.yml
@@ -1,4 +1,7 @@
 title:
   en: shader_transparent_glass
 stub: true
+img: glass.jpg
+imgCaption:
+  en: The Warthog's windscreen uses a glass shader.
 tagName: shader_transparent_glass
