Write basic point_physics docs; update h1a-tool BCF arguments; use icons for workflow items

--- a/src/content/h1/tags/point_physics/page.yml
+++ b/src/content/h1/tags/point_physics/page.yml
@@ -2,3 +2,6 @@ title:
   en: point_physics
 stub: true
 tagName: point_physics
+img: pphy.jpg
+imgCaption:
+  en: Point physics usages shown as red and green markers within a [flag][] and [particles][particle].
