--- a/src/data/structs/h1/tags/point_physics.yml
+++ b/src/data/structs/h1/tags/point_physics.yml
@@ -17,6 +17,9 @@ type_defs:
       tag_id: pphy
       post_cache_deformat: true
       pre_compile: true
+    comments:
+      en: >-
+        Controls how simulated points points physically interact with the environment.
     assert_size: 64
     fields:
       - name: flags
