--- a/src/data/structs/h1/files/map.yml
+++ b/src/data/structs/h1/files/map.yml
@@ -264,7 +264,7 @@ type_defs:
         type: uint32
         comments:
           en: >-
-            Offset to tag paths.
+            Offset to [tag paths][tags#tag-references-and-paths].
       - name: resources_offset
         type: uint32
         comments:
